apps/portfolio-next/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: portfolio-next
  labels:
    app.kubernetes.io/name: portfolio-next
